--- a/layout/IMS/static/css/index.css
+++ b/layout/IMS/static/css/index.css
@@ -1,17 +1,37 @@
-.textList__itm{
-    cursor: pointer;
-    display: inline-block;
-    width: 100px;
-    height: 100px;
-    background-color: #fff;
-    border-radius: 20px;
-    box-shadow: 3px 3px 5px rgba(180, 180, 180, 0.521), 3px 3px 5px #fff;
-    margin: 0px 20px 0px 0px;
-    transition: .2s;
+/* BANNER */
+.banner__img{
+    background: url('../img/home/main.png'); /* 배너 이미지 링크 */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 60em;
+    box-shadow: 0px 3px 5px rgba(71, 71, 71, 0.287);
 }
-.textList__itm:hover{
-    box-shadow: 1px 1px 3px rgba(180, 180, 180, 0.521), 1px 1px 3px #fff;
+
+.banner__img--text{
+    background-color: rgba(0, 0, 0, 0.103);
+    color: rgb(65, 65, 65);
+    font-size: 50px;
+    font-weight: bold;
+    width: 40%;
+    padding: 30px 50px;
 }
-.textList__itm:active{
-    box-shadow: inset 3px 3px 5px rgba(180, 180, 180, 0.521), inset 3px 3px 5px #fff;
+
+.banner__img--text_info{
+    font-size: 40px;
+    font-weight: 100;
+}
+
+@media screen and (max-width: 467px){
+    .banner__img--text{
+        font-size: 30px;
+        width: 60%;
+        padding: 20px 30px;
+    }
+    
+    .banner__img--text_info{
+        font-size: 25px;
+        font-weight: 100;
+    }
 }
