--- a/layout/IMS/static/css/layout.css
+++ b/layout/IMS/static/css/layout.css
@@ -18,7 +18,10 @@ a, ul{
 /* ------------------------------------------------ */
 
 header{
-    height: 80px;
+    position: relative;
+    z-index: 0;
+    min-height: 80px;
+    background-color: #fff;
     box-shadow: 0px 3px 5px rgba(71, 71, 71, 0.287);
 }
 
@@ -50,10 +53,26 @@ nav .nav--itm{
 
 main{
     min-height: 795px;
-    margin: 50px;
+    margin: 0px 50px;
 }
 
 footer{
-    height: 100px;
+    min-height: 100px;
     box-shadow: 0px -3px 5px rgba(71, 71, 71, 0.171);
+}
+
+@media screen and (max-width: 467px){
+    .logo{
+        margin: 18px 0px 18px 20px;
+        width: 38px;
+        height: 44px;
+    }
+
+    nav{
+        margin: 0px 10px 0px 0px;
+    }
+    nav .nav--itm{
+        font-size: 15px;
+        margin: 0px 5px 0px 0px;
+    }
 }
